<resources>
    <string name="app_name">Internship</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title">"NORTHWEST MISSOURI STATE UNIVERSITY"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="student">"Student"</string>
    <string name="Faculty">"Faculty"</string>
    <string name="Admin">"Admin"</string>
    <string name="title_activity_student_login">StudentLoginActivity</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="username">"abc@example.com"</string>
    <string name="password">"northwest"</string>
    <string name="title_activity_student_dashboard2">StudentDashboard2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forgotpassword"><a href="https://www.nwmissouri.edu/compserv/Passwords/index.htm">Forgot Password ?</a></string>
    <string name="studenttermsconditions">CPT allows international students to work off campus in a paid position if the work involved will satisfy requirements for internship credit. Students must be enrolled full-time for at least two regular semesters (spring and fall) at Northwest to be eligible for CPT.
CPT can be completed for one year, minus one day. Full-time status on CPT for more than one year will eliminate OPT eligibility.
CPT can be full-time in the summer, May to August.
CPT can only be part-time during the fall and spring semesters (20 hours per week.)
Full-time enrollment in class is required during the fall and spring semesters.
Students must re-apply who want to complete CPT for more than one semester.
Employment can only begin after receiving a Form I-20 with the Designated School Official endorsement.
Employment must end on or before the end date specified on the Form I-20. If employment ends prior to the end date, I will notify my DSO.
By signing this agreement, I acknowledge that I have read and will comply with the information provided. I understand that failure to comply will result in losing my immigration status and my SEVIS file being terminated.
By reading these regulations and signing, you agree to follow the immigration regulations to maintain your immigration status.  As an F-1 international student, you agree to:
Pursue a "full course of study" at the school listed on the currently valid Form I-20 during every academic session or semester except during official school breaks, or unless approved under specific exception, in advance, by the P/DSO.
Undergraduate students = 12 credits per semester
Graduate students = 6 credits per semester
Make normal progress towards completing the course of study, by completing studies before the expiration of the program completion date on Form I-20.
Keep Form I-20 valid by following proper procedures for an extension of stay.  Refer to the end date on your Form I-20 to ensure you will be graduating on, or before, that end date.  If you will not complete in the time allotted, you will need to request a program extension.
Keep Form I-20 valid by following proper procedures for change in education levels or programs of study.  If your current Form I-20 does not have your correct major, consult with a P/DSO.
Not work off-campus, unless specifically authorized by a P/DSO.
Not work more than 20 hours per week, on-campus, while classes are in session.
Report a change of address within 10 days of the change.
Abide by the F-1 grace period rules:</string>
    <string name="submitted_sucessfully">Your application is submitted</string>
</resources>