<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:fontFamily="@font/blinker_bold"
            android:text="@string/title"
            android:textColor="@color/northwest_green"
            android:textSize="26sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/studetnCard"
            android:layout_width="166dp"
            android:layout_height="161dp"
            android:layout_margin="10dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/northwest_green"
            app:cardCornerRadius="12dp"
            app:cardElevation="@dimen/_5sdp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/studentupdated"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="125dp"
                android:fontFamily="@font/opensans"
                android:text="@string/student"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/facultyCard"
            android:layout_width="166dp"
            android:layout_height="161dp"
            android:layout_margin="10dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/northwest_green"
            app:cardCornerRadius="12dp"
            app:cardElevation="@dimen/_5sdp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/faculty"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="125dp"
                android:fontFamily="@font/opensans"
                android:text="@string/Faculty"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adminCard"
            android:layout_width="166dp"
            android:layout_height="161dp"
            android:layout_margin="10dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/northwest_green"
            app:cardCornerRadius="12dp"
            app:cardElevation="@dimen/_5sdp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:src="@drawable/admin"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="125dp"
                android:fontFamily="@font/opensans"
                android:text="@string/Admin"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>